--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
     </div>
 
     <div id="cores_lateral_direita">
-        <div class="quadro_porc_direita cs_preta">Pares<br><span class="qtd_par_impar"></span></div>
-        <div class="quadro_porc_direita cs_vermelha">Impares<br><span class="qtd_par_impar"></span></div>
+        <div class="quadro_porc_direita cs_jogos">Pares<br><span class="qtd_par_impar"></span></div>
+        <div class="quadro_porc_direita cs_jogos">Impares<br><span class="qtd_par_impar"></span></div>
+        <div class="quadro_porc_direita cs_jogos">Jogos<br><span id="qtd_jogos"></span></div>
     </div>
 
     <div id="bancada_roleta">
